// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree 1: Pre-order - halting 1`] = `
Array [
  "F",
  "B",
  "A",
  "D",
  "C",
]
`;

exports[`Tree 1: Pre-order - halting 2`] = `
Array [
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": true,
      "previousVisitedVertex": null,
      "visitIndex": 0,
    },
    "vertex": Object {
      "$c": Array [
        "B",
        "G",
      ],
      "$d": "F",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [
          "B",
          "G",
        ],
        "$d": "F",
      },
      "visitIndex": 1,
    },
    "vertex": Object {
      "$c": Array [
        "A",
        "D",
      ],
      "$d": "B",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
      "visitIndex": 2,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": "A",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [],
        "$d": "A",
      },
      "visitIndex": 3,
    },
    "vertex": Object {
      "$c": Array [
        "C",
        "E",
      ],
      "$d": "D",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [
          "C",
          "E",
        ],
        "$d": "D",
      },
      "visitIndex": 4,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": "C",
    },
  },
]
`;

exports[`Tree 1: Pre-order - halting 3`] = `
Object {
  "resolvedTreeMap": Map {
    Object {
      "$c": Array [
        "B",
        "G",
      ],
      "$d": "F",
    } => Array [
      Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
    ],
    Object {
      "$c": Array [
        "A",
        "D",
      ],
      "$d": "B",
    } => Array [
      Object {
        "$c": Array [],
        "$d": "A",
      },
      Object {
        "$c": Array [
          "C",
          "E",
        ],
        "$d": "D",
      },
    ],
    Object {
      "$c": Array [
        "C",
        "E",
      ],
      "$d": "D",
    } => Array [
      Object {
        "$c": Array [],
        "$d": "C",
      },
    ],
  },
  "rootVertex": Object {
    "$c": Array [
      "B",
      "G",
    ],
    "$d": "F",
  },
  "vertexContextMap": Map {
    Object {
      "$c": Array [
        "B",
        "G",
      ],
      "$d": "F",
    } => null,
    Object {
      "$c": Array [
        "A",
        "D",
      ],
      "$d": "B",
    } => Object {
      "hint": "B",
      "parentVertex": Object {
        "$c": Array [
          "B",
          "G",
        ],
        "$d": "F",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
    Object {
      "$c": Array [],
      "$d": "A",
    } => Object {
      "hint": "A",
      "parentVertex": Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
    Object {
      "$c": Array [
        "C",
        "E",
      ],
      "$d": "D",
    } => Object {
      "hint": "D",
      "parentVertex": Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
      "vertexHintOriginalOrderIndex": 1,
      "vertexHintTraversalOrderIndex": 1,
    },
    Object {
      "$c": Array [],
      "$d": "C",
    } => Object {
      "hint": "C",
      "parentVertex": Object {
        "$c": Array [
          "C",
          "E",
        ],
        "$d": "D",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
  },
}
`;
